# obscura-android-port

./: .gitignore  Cargo.toml  README.md
.qwen/skills/auto-skill-deno-core-to-rquickjs-port/: SKILL.md
android/: jni-boundary.rs
crates/obscura-dom/: Cargo.toml
crates/obscura-dom/src/: lib.rs  tree_sink.rs
crates/obscura-js/: Cargo.toml  build.rs
crates/obscura-js/examples/: async_interrupt_test.rs  bootstrap_test.rs  esm_test.rs  ffi_interrupt_test.rs  interrupt_diag.rs  interrupt_test.rs  metasearch_cli.rs  perf_bench.rs  perf_quick.rs  search_cli.rs  test_search.rs  watchdog_test.rs
crates/obscura-js/js/: bootstrap.js
crates/obscura-js/src/: cdp_watchdog.rs  lib.rs  module_loader.rs  ops.rs  runtime.rs  state.rs  v8_lock.rs
crates/obscura-net/src/: cookies.rs  interceptor.rs  lib.rs
docs/: FINDINGS.md  GUIDE.md  STATUS.md  screenshot.md
porting/: PLAN.md  deno_core-to-rquickjs.md  ops-inventory.md
porting/skeleton/: Cargo.toml  build.rs
porting/skeleton/js/: bootstrap.js
porting/skeleton/src/: bridge.rs  lib.rs  markdown.rs  runtime.rs  state.rs
scripts/: setup-cross.sh  setup-termux.sh
search/: index.html  server.py
spike/: Cargo.toml  VERIFIED-OUTPUT.txt  build-cross.sh  build-termux.sh
spike/src/: main.rs
webshot/: AndroidManifest.xml  build.sh
webshot/src/com/webshot/: Capturer.kt  HttpServer.kt  MainActivity.kt  ShotService.kt
