[package]
name = "obscura-dom"
version.workspace = true
edition.workspace = true

[dependencies]
html5ever = { workspace = true }
markup5ever = { workspace = true }
selectors = { workspace = true }
servo_arc = { workspace = true }
cssparser = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
precomputed-hash = "0.1"

[dev-dependencies]
