[package]
name = "obscura-js"
version.workspace = true
edition.workspace = true

[features]
default = []
stealth = ["obscura-net/stealth"]

[dependencies]
obscura-dom = { workspace = true }
obscura-net = { workspace = true }
rquickjs = { version = "0.12.1", features = ["full-async", "bindgen", "macro", "parallel", "loader"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
html5ever = { workspace = true }
base64 = { workspace = true }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
aes-gcm = "0.10"
cbc = { version = "0.1", features = ["alloc"] }
ctr = "0.9"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
hkdf = "0.12"
getrandom = "0.2"
urlencoding = "2"

[lib]
crate-type = ["rlib"]
